tests/CompileErrors/CompileErrors.fs
module CompileErrors

let invalid x y = x + y
